# img_viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.bat  facecrop.bat  main.vala  mainwindow.vala  run.bat
.github/: copilot-instructions.md
cmake/: BuildOpenCV.cmake  BuildVala.cmake  LinkAll.cmake  UseVala.cmake
data/: lbpcascade_animeface.xml
debug/: debug_compile.bat  debug_main.vala
icon/: folder.svg.bak
img/: mask.vala
img/freng/: F-Xpx-wa4AAsnTq.jfif  GFS7636agAAAet1.jfif  GGBkvUEbEAAdCPy.jfif  GId6BA8bUAAeflb.jfif  GJpbb_TbwAAiCpT.jfif  GL6uLYfa4AAT2Tg.jfif  GRXyMJcbIAAsHNI.jfif  GUwtTpSboAA6Oob.jfif  GW2VA3UWIAAmsTV.jfif
scripts/: build_img_viewer_mingw.bat  cleanup_outputs.bat  run_img_viewer_mingw.bat  setup_msys2_env.bat
src/cpp/: face_detect.cpp
src/vala/: dummy.c  main.vala  mainwindow.vala
src/vala/debug/: debug_compile.bat  debug_main.vala
src/vala/utils/: CairoUtils.vala  FaceCrop.vala  SvgUtils.vala  facecrop.bat  filerepository.vala  folderloader.vala  folderscanner.vala  mask.vala  maskpixbuf.vala  opencv_wrapper.cpp  opencv_wrapper.h  opencv_wrapper.vapi  random.vala  thumbnailer.vala
src/vala/views/: basewindow.vala  foldergridview.vala  grid.vala  imageflowview.vala  imagegridview.vala  thumbnailer_copy202510281911.vala
src/vala/widgets/: footerbar.vala  imageitem.vala
utils/: CairoUtils.vala  SvgUtils.vala  folderloader.vala  folderscanner.vala  mask_pixbuf.vala  opencv_wrapper.cpp  opencv_wrapper.vapi  random.vala  thumbnailer.vala
views/: basewindow.vala  foldergridview.vala  grid.vala  imageflowview.vala  imagegridview.vala  thumbnailer_copy202510281911.vala
widgets/: footerbar.vala  imageitem.vala
